# examples

features/workspace/cmake/: CMakeLists.txt
features/workspace/cmake/chat/: conanfile.py
features/workspace/cmake/chat/src/: CMakeLists.txt  app.cpp
features/workspace/cmake/hello/: conanfile.py
features/workspace/cmake/hello/src/: CMakeLists.txt
features/workspace/cmake/say/: conanfile.py
features/workspace/cmake/say/src/: CMakeLists.txt
